<resources>
    <string name="app_name">pruebaDiagnostica</string>
    <string name="register">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="nombres">Nombres</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="rpassword">Repetir Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <style name="logo">Logo de la Univerdidad</style>


</resources>